CSpace/workspace/assets/css/styles.css
/*
Colors:
1B77E0 - darker blue, bottom border on header
*/
*{
  padding: 0;
  margin: 0;
  font-family: "Georgia";
}
body{
  background: #FFF;
  padding-top: 59px;
}
#header_container{
  background: #7eb3dd;
  border-bottom: 2px #1B77E0 solid;
}
.page_header{
  width: 800px;
  margin: 0px auto;
  position: relative;
}
.page_header hgroup{
  margin-bottom: 10px;
}
.page_header hgroup h1{
  font-size: 16pt;
}
.page_header hgroup h2{
  font-size: 12pt;
  padding-left: 5px;
  padding-top: 5px;
  font-weight: normal;
}
.page_header .left-side{
  float: left;
  margin-right: 40px;
}
.page_header .middle-side{
  padding-top: 10px;
  float: left;
}
.page_header .right-side{
  float: right;
}
a{
  text-decoration: none;
}
#container{
  width: 100%;
  margin: 10px auto;
}
.feed-links {
  padding-top: 2px;
  border-top: 1px white solid;
}
.feed-links ul {
  margin-bottom: 2px;
}
.feed-links li{
  display: inline-block;
}
.feed-links li a{
  display: inline-block;
  padding: 1px 10px;
  text-decoration: none;
  color: #FFF;
}
.feed-links li a:hover, .feed-links li a.current{
  color: #0000CB;
}
ul{
  list-style-type: none;
}

.more .close:hover{
  text-decoration: underline;
}

.more{
  margin-top: 0px;
  font-size: 14px;
  display: none;
  padding: 10px;
}

.label{
  position: absolute;
  top: -17px;
  left: 0px;
  padding: 2px 4px;
  border-radius: 5px;
  font-size: 10px;
  margin-right: 10px;
  font-family: "Arial";
  display: none;
}
.pg_All .label{
  display: block;
  background: tranparent;
}

.clear{
  clear: both;
}
.sidebar_col{
  float: left;
  padding-left: 1%;
  width: 13%;
  padding-right: 1%;
}
.feed_col{
  width: 45%;
  float: left;
}
.review_col{
  width: 38%;
  padding-left: 1%;
  float: left;
  padding-right: 1%;
  position: relative;
}
.review_col .floating{
}
.review_col .clustering{
  padding-top: 5px;
}
.some_selections {
  display: none;
}
.cluster_results{
  padding-top: 5px;
}
#feed > li, #feed .bookmarks > li, #feed .snippets > li, #feed .bookmark-snippets > li{
  margin-bottom: 20px;
  position: relative;
  border-top: 4px #1B77E0 solid;
  border-left: 1px #1B77E0 solid;
  border-right: 1px #1B77E0 solid;
  border-bottom: 1px #1B77E0 solid;
  background: #FFF;
  border-radius: 5px;
}
#feed li{
}
#feed li .top{
  padding: 5px 10px;
  position: relative;
  word-wrap: break-word;
}
#feed .day{
  color: #999;
  font-weight: normal;
  margin-bottom: 5px;
  border-bottom: 1px #999 dashed;
}
#feed li .sub{
  font-size: 14px;
  position: relative;
  background: #FFF;
  border-top: 1px #1B77E0 solid;
  padding: 2px 10px;
  margin-top: 5px;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}

#feed li .sub a{
  cursor: pointer;
}
#feed li .sub-right{
  font-size: 14px;
  position: absolute;
  bottom: 2px;
  right: 10px;
}
#feed li .sub-right .edit{
  margin-left: 10px;
}

#feed li.search-hidden{
  display: none;
}
#feed li.item-bookmark{
  border-color: #F5F531;
}
.pg_All #feed li.item-bookmark{
  border-top-width: 18px;
}
#feed li.item-snippet{
  border-color: #65F778;
}
.pg_All #feed li.item-snippet{
  border-color: #65F778;
  border-top-width: 18px;
}
#feed li.item-search{
  border-color: #FFCCA8;
}
.pg_All #feed li.item-search{
  border-color: #FFCCA8;
  border-top-width: 18px;
}
#feed li.item-source{
  border-color: #E1B1FC;
}
.pg_All #feed li.item-source{
  border-top-width: 18px;
}
.pg_All #feed li.item-page {
  border-color: #98C9F5;
  border-top-width: 18px;
}
#feed li.item-source .related-section, #feed li.item-bookmark .bookmark-related-section{
  padding: 5px 5px 5px 25px;
  display: none;
}
#feed li.item-bookmark .bookmark-related{
  margin-left: 10px;
}
#feed li.item-source .related-section .snippets-heading{
  padding-top: 20px;
}
#feed li.item-bookmark .tag-input{
  width: 300px;
  border: 1px black solid;
}
#feed li.item-bookmark .row{
  margin-bottom: 20px;
}
#feed li.item-bookmark .rating{
  position: relative;
  top: 2px;
}
#feed li.item-bookmark .feedback{
  display: none;
  padding: 10px;
  background: #DDD;
  margin-bottom: 10px;
}
#feed li.item-bookmark textarea{
  width: 300px;
  padding: 5px 10px;
  min-height: 3em;
  border: 1px black solid;
}
#feed li.item-snippet .preview{
  font-size: 14px;
}
#feed li .left_section img{
  border: 1px grey solid;
}
#feed li .left_section label{
  cursor: pointer;
}
#feed li.item-bookmark .tag{
  border: 1px black solid;
  border-radius: 3px;
  padding: 1px 3px;
  font-size: 12px;
  margin-left: 5px;
}
#feed li .left_section {
  float: left;
}
#feed li .right_section {
  float: left;
  padding-left: 2%;
  /* padding-left: 10px; */
  /* width: 480px;*/
}
#feed li .clear {
  clear: both;
}
table.contributions{
  width: 100%;
  cellspacing: 0;
  cellpadding: 0;
  border-collapse :collapse;
  border: 1px black solid;
  margin-top: 5px;
}
table.contributions th{
  text-align: left;
  padding: 1px 4px;
  font-size: 13px;
  font-family: "Arial";
  background: #EEE;
  border-right: 1px black solid;
  text-align: right;
}
table.contributions td{
  background: #FFF;
  padding: 1px 3px;
  font-size: 13px;
  font-family: "Arial";
  text-align: center;
}
table.contributions tr:first-child td{
  border-bottom: 1px black solid;
}
table.contributions tr td:nth-child(odd){
  background: #EEF;
}



table.questionnaires{
  cellspacing: 0;
  cellpadding: 0;
  border-collapse :collapse;
  border: 1px black solid;
  border-radius: 5px;
  margin-top: 5px;
  margin-right: 20px;
}
table.questionnaires th{
  text-align: left;
  padding: 2px 4px;
  font-size: 12px;
  font-family: "Arial";
  background: #EEE;
  border: 1px black solid;
  text-align: right;

}
table.questionnaires td{
  background: #FFF;
  padding: 1px 3px;
  font-size: 12px;
  border-top: 1px gray solid;
  border-bottom: 1px black solid;
  font-family: "Arial";
  text-align: center;
}
table.questionnaires tr:first-child td{
  border-bottom: 1px black solid;
}
table.questionnaires tr td:nth-child(odd){
  background: #FFF;
}
/* ... */

